# SimpleTextProjector

./: .gitignore  CMakeLists.txt  CommandRequestHandler.cpp  CommandRequestHandler.h  CustomErrorHandler.cpp  CustomErrorHandler.h  HTTPCommandServer.cpp  HTTPCommandServer.h  HTTPSCommandServer.cpp  HTTPSCommandServer.h  Main.cpp  README.md  ScreenStreamer.cpp  ScreenStreamer.h  ScreenStreamerTask.cpp  ScreenStreamerTask.h  Server.cpp  Server.h  Session.h  SharedVariables.h  SimpleTextProjector.properties  SimpleTextProjector.sln  SimpleTextProjector.vcxproj  SimpleTextProjector.vcxproj.filters  Source.cpp  TCPServer.cpp  TCPServer.h  WebSocketHandler.h  fast_mutex.h  helper_funcs.h  imgui.ini  tinythread.cpp  tinythread.h
Libraries/include/base64pp/: base64pp_export.h
Libraries/include/libavutil/: ffversion.h
Libraries/lib/: PocoCryptod.lib  PocoDataSQLite.lib  PocoFoundation.lib  PocoFoundationd.lib  PocoJSON.lib  PocoJSONd.lib  PocoNet.lib  PocoNetd.lib  PocoUtild.lib  PocoXMLd.lib
include/glad/: glad.h
lib/: PocoCrypto.lib  PocoDatad.lib  PocoFoundationd.lib  PocoJSONd.lib  PocoNetSSLWind.lib  PocoUtil.lib
lib/libcommon/: datachannel.lib
lib/libd/: PocoDataSQLited.lib  PocoNetd.lib
lib/libr/: PocoData.lib  PocoJSON.lib  PocoNetSSLWin.lib  PocoXML.lib
src/: Base64.h  CommandRequestHandler.cpp  CommandRequestHandler.h  HTTPCommandServer.cpp  HTTPCommandServer.h  HTTPSCommandServer.cpp  HTTPSCommandServer.h  HandlerList.cpp  HandlerList.h  Handlers.h  Main.cpp  ScreenStreamer.cpp  ScreenStreamer.h  ScreenStreamerTask.cpp  ScreenStreamerTask.h  SharedVariables.h  SimpleTextProjectorUI.cpp  SimpleTextProjectorUI.h  TextBoxFactory.cpp  TextBoxFactory.h  TextBoxRenderer.cpp  TextBoxRenderer.h  TextRenderer2D.cpp  TextRenderer2D.h  WebSocketHandler.h  glad.c
www/: index.html
